kubernetes/mini/apps/media/jellystat/app/networkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: jellystat
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: jellystat
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: homepage
            io.kubernetes.pod.namespace: selfhosted
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP

  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: jellyfin
      toPorts:
        - ports:
            - port: "8096"
              protocol: TCP
    - toFQDNs:
        - matchPattern: '*.npmjs.org'
